Removed verbose comment

--- a/rpg/index.html
+++ b/rpg/index.html
@@ -36,56 +36,7 @@
           </tr>
         </thead>
         <tbody>
-        <!--
-          <tr>
-            <td><input type="checkbox" value="0"></td>
-            <td><a href="character.html#Patrick Stewart#Breton#Male#Light#1000">Patrick Stewart</a></td>
-            <td>Breton</td>
-            <td>Male</td>
-            <td>Light</td>
-            <td>1000lbs</td>
-          </tr>
-          <tr>
-            <td><input type="checkbox" value"1"></td>
-            <td><a href="character.html#Quark#Khajiit#Female#Fur#100">Quark</a></td>
-            <td>Khajiit</td>
-            <td>Female</td>
-            <td>Fur</td>
-            <td>100lbs</td>
-          </tr>
-          <tr>
-            <td><input type="checkbox" value="2"></td>
-            <td><a href="character.html#Jaden Korr#Redguard#Female#Red#140">Jaden Korr</a></td>
-            <td>Redguard</td>
-            <td>Female</td>
-            <td>Red</td>
-            <td>140lbs</td>
-          </tr>
-          <tr>
-            <td><input type="checkbox" value="3"></td>
-            <td><a href="character.html#Qui-Gon Jinn#Argonian#Male#Light#170">Qui-Gon Jinn</a></td>
-            <td>Argonian</td>
-            <td>Male</td>
-            <td>Light</td>
-            <td>170lbs</td>
-          </tr>
-          <tr>
-            <td><input type="checkbox" value="4"></td>
-            <td><a href="character.html#Ted Cruz#Imperial#Female#Light#103">Ted Cruz</a></td>
-            <td>Imperial</td>
-            <td>Female</td>
-            <td>Light</td>
-            <td>103lbs</td>
-          </tr>
-          <tr>
-            <td><input type="checkbox" value="5"></td>
-            <td><a href="character.html#Scorpion#Dunmer#Male#Light#250">Scorpion</a></td>
-            <td>Dunmer</td>
-            <td>Male</td>
-            <td>Light</td>
-            <td>250lbs</td>
-          </tr>
-          -->
+        <!-- WHERE THE CHARACTERS GO -->
         </tbody>
       </table>
       <footer>
