--- a/rpg/index.html
+++ b/rpg/index.html
@@ -45,24 +45,6 @@
       </footer>
     </div>
 
-<!-- Delete Character Modal -->
-  <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title">Are you sure that you want to delete this character?</h4>
-        </div>
-        <div class="modal-body">
-          Deleting a character is permanent and <strong>cannot be undone</strong>.
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Don't Delete</button>
-          <button id="confirm-delete-button" type="button" class="btn btn-danger">Delete Character</button>
-        </div>
-      </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-  </div><!-- /.modal -->
-
 <!-- Create Character Modal -->
   <div class="modal fade" id="createModal" tabindex="-1" role="dialog" data-backdrop="static">
     <div class="modal-dialog">
@@ -150,6 +132,25 @@
     </div>
   </div>
 
+  <!-- Delete Character Modal -->
+  <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Are you sure that you want to delete this character?</h4>
+        </div>
+        <div class="modal-body">
+          Deleting a character is permanent and <strong>cannot be undone</strong>.
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Don't Delete</button>
+          <button id="confirm-delete-button" type="button" class="btn btn-danger">Delete Character</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+
+  <!-- Help Modal -->
   <div class="modal fade" id="helpModal" tabindex="-1" role="dialog">
     <div class="modal-dialog">
       <div class="modal-content">
