--- a/rpg/index.html
+++ b/rpg/index.html
@@ -71,10 +71,11 @@
           </select>
           <label for="Gender">Gender</label>
           <select class="form-control" id="gender">
-            <option>Select a Gender</option>
+            <option>Gender</option>
             <option>Male</option>
             <option>Female</option>
           </select>
+          <!--<input type="Gender" class="form-control" id="gender">-->
           <label for="Level">Level</label>
           <input type="Level" class="form-control" id="level" placeholder="Enter Level of Dragonborn">
           <label for="Money">Money</label>
@@ -119,6 +120,7 @@
             <option>Male</option>
             <option>Female</option>
           </select>
+          <input type="Gender" class="form-control" id="gender">
           <label for="Edit Level">Edit Level</label>
           <input type="Level" class="form-control" id="edit-level" placeholder="Edit Level of Dragonborn">
           <label for="Edit Money">Edit Money</label>
@@ -150,7 +152,7 @@
     </div><!-- /.modal-dialog -->
   </div><!-- /.modal -->
 
-  <!-- Help Modal -->
+  <!-- Help Modal --> 
   <div class="modal fade" id="helpModal" tabindex="-1" role="dialog">
     <div class="modal-dialog">
       <div class="modal-content">
