Attempting to add attributes using jQuery

--- a/rpg/character.html
+++ b/rpg/character.html
@@ -31,13 +31,22 @@
               </strong>
             </em>
           </h1>
-          <p><strong><script>document.write("Race: " + a[2]);</script>
-              &#8226; <script>document.write("Gender: " + a[3]);</script>
-              &#8226; <script>document.write("Skin Tone: " + a[4]);</script>
-              &#8226; <script>document.write("Weight: " + a[5] + "lbs");</script>
-          </p></strong>
-
-
+          <!--window.location.hash.split("#")
+          <p><strong><script>document.write("Race: " + );</script>
+              &#8226; <script>document.write("Gender: " + );</script>
+              &#8226; <script>document.write("Level: " + );</script>
+              &#8226; <script>document.write("Money: $" + );</script>
+          </p></strong> -->
+          <table id="attributes" class="table table-borderless table-condensed">
+            <thead>
+              <tr>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+              </tr>
+            </thead>
+          </table>
           <table class="table table-borderless table-condensed table-hover">
             <thead>
               <tr>
