--- a/rpg/index.html
+++ b/rpg/index.html
@@ -18,9 +18,9 @@
         <center><h1>Character Creator</h1></center>
         <div class="btn-group btn-group-justified">
             <a id="create-button" data-toggle="modal" href="#createModal" class="btn btn-lg btn-success btn-block"><span class="glyphicon glyphicon-pencil"></span> Create Character</a>
-            <a id="edit-button" data-toggle="modal" class="btn btn-info btn-lg btn-block" href="#editModal"><span class="glyphicon glyphicon-edit"></span> Edit Character</a>
-            <a id="delete-button" data-toggle="modal" href="#deleteModal" class="btn btn-lg btn-danger btn-block"><span class="glyphicon glyphicon-trash"></span> Delete Character</a>
-          </div>
+            <a id="edit-button" data-toggle="modal" class="btn btn-info btn-lg btn-block edit-button" href="#editModal"><span class="glyphicon glyphicon-edit"></span> Edit Character</a>
+            <a id="delete-button" data-toggle="modal" href="#deleteModal" class="btn btn-lg btn-danger btn-block delete-button"><span class="glyphicon glyphicon-trash"></span> Delete Character</a>
+        </div>
       </div>
       <table id="character-table" class="table table-striped">
         <thead>
@@ -82,7 +82,7 @@
           <input type="text" class="form-control" id="money" placeholder="Enter Amount of Money">
         </div>
         <div class="modal-footer">
-          <button id="confirm-random-create-button"type="button" class="btn btn-warning" data-dismiss="modal" id="CharacterSpawner">Spawn Random Character</button>
+          <button id="confirm-random-create-button"type="button" class="btn btn-warning" data-dismiss="modal" style = "float: left;" id="CharacterSpawner">Spawn Random Character</button>
           <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
           <button id="confirm-create-button" type="button" class="btn btn-success">Create Character</button>
         </div>
