Simplified my overly complex stat display

--- a/rpg/character.html
+++ b/rpg/character.html
@@ -31,22 +31,7 @@
               </strong>
             </em>
           </h1>
-          <!--window.location.hash.split("#")
-          <p><strong><script>document.write("Race: " + );</script>
-              &#8226; <script>document.write("Gender: " + );</script>
-              &#8226; <script>document.write("Level: " + );</script>
-              &#8226; <script>document.write("Money: $" + );</script>
-          </p></strong> -->
-          <table id="attributes" class="table table-borderless table-condensed">
-            <thead>
-              <tr>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-              </tr>
-            </thead>
-          </table>
+          <h4 class = "attributething"><strong></h4></strong>
           <table class="table table-borderless table-condensed table-hover">
             <thead>
               <tr>
@@ -215,7 +200,7 @@
             <table class="table inventoryTable">
               <thead>
                 <h1><strong><em>Inventory</em></strong></h1>
-                <p><strong>A list of <script>document.write(a[1]+"'s ");</script>items.</strong></p>
+                <p><strong>A list of <em></em>items.</strong></p>
                 <th>
                   <span class="glyphicon glyphicon-check"></span>
                 </th>
