--- a/rpg/index.html
+++ b/rpg/index.html
@@ -83,7 +83,7 @@
         </div>
         <div class="modal-footer">
           <button id="confirm-random-create-button"type="button" class="btn btn-warning" data-dismiss="modal" style = "float: left;" id="CharacterSpawner">Spawn Random Character</button>
-          <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+          <button id="cancel-create-button" type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
           <button id="confirm-create-button" type="button" class="btn btn-success">Create Character</button>
         </div>
       </div>
