Modified id in character

--- a/rpg/character.html
+++ b/rpg/character.html
@@ -32,7 +32,7 @@
             </em>
           </h1>
           <h4 class = "attributething"><strong></h4></strong>
-          <table class="table table-borderless table-condensed table-hover">
+          <table id = "skilltable" class="table table-borderless table-condensed table-hover">
             <thead>
               <tr>
                 <th>Skill</th>
