Fix misplaced asynchronous-dependent code.

--- a/rpg/index.html
+++ b/rpg/index.html
@@ -82,7 +82,7 @@
           <input type="text" class="form-control" id="money" placeholder="Enter Amount of Money">
         </div>
         <div class="modal-footer">
-          <button id="confirm-random-create-button"type="button" class="btn btn-warning" data-dismiss="modal" style = "float: left;" id="CharacterSpawner">Spawn Random Character</button>
+          <button id="confirm-random-create-button"type="button" class="btn btn-warning pull-left" data-dismiss="modal" id="CharacterSpawner">Spawn Random Character</button>
           <button id="cancel-create-button" type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
           <button id="confirm-create-button" type="button" class="btn btn-success">Create Character</button>
         </div>
