Final cleanup, cancel clearing fully implemented

--- a/rpg/index.html
+++ b/rpg/index.html
@@ -133,7 +133,7 @@
     </div>
 
     <!-- Delete Character Modal -->
-    <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static">
+    <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" data-backdrop="static">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
