--- a/rpg/character.html
+++ b/rpg/character.html
@@ -278,12 +278,12 @@
           </div>
           <div class="modal-body">
             <label for="Name">Name</label>
-            <input type="Name" class="form-control name" id="name" placeholder="Item">
+            <input type="Name" class="form-control name" id="item-name" placeholder="Item">
             <label for="Damage">Damage</label>
-            <input type="Damage" class="form-control name" id="damage" placeholder="Damage">
+            <input type="Damage" class="form-control name" id="item-damage" placeholder="Damage">
             <label for="Weight">Weight</label>
-            <input type="Weight" class="form-control name" id="weight" placeholder="Weight"><label for="Value">Value</label>
-            <input type="Value" class="form-control name" id="value" placeholder="Value">
+            <input type="Weight" class="form-control name" id="item-weight" placeholder="Weight"><label for="Value">Value</label>
+            <input type="Value" class="form-control name" id="item-value" placeholder="Value">
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default btn-danger" data-dismiss="modal">Cancel</button>
@@ -302,12 +302,12 @@
           </div>
           <div class="modal-body">
             <label for="Name">Name</label>
-            <input type="Name" class="form-control name" id="name" placeholder="Edit Item Name">
+            <input type="Name" class="form-control name" id="edit-item-name" placeholder="Edit Item Name">
             <label for="Damage">Damage</label>
-            <input type="Damage" class="form-control name" id="damage" placeholder="Edit Damage">
+            <input type="Damage" class="form-control name" id="edit-item-damage" placeholder="Edit Damage">
             <label for="Weight">Weight</label>
-            <input type="Weight" class="form-control name" id="weight" placeholder="Edit Weight"><label for="Damage">Damage</label>
-            <input type="Value" class="form-control name" id="value" placeholder="Edit Value">
+            <input type="Weight" class="form-control name" id="edit-item-weight" placeholder="Edit Weight"><label for="Damage">Damage</label>
+            <input type="Value" class="form-control name" id="edit-item-value" placeholder="Edit Value">
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default btn-danger" data-dismiss="modal">Cancel Edit</button>
