--- a/direct-manipulation/boxes-touch.html
+++ b/direct-manipulation/boxes-touch.html
@@ -7,7 +7,7 @@
         <!-- Assorted iOS-related metadata. -->
         <meta name="viewport" content="width=1000px"/>
 
-        <title>Direct Manipulation on a Web Page: Touch Version</title>
+        <title>Direct Manipulation w/ Touch, by Edward Bramanti</title>
         <link rel="stylesheet" type="text/css" href="boxes-touch.css"/>
 
         <!-- Load up jQuery first. -->
