--- a/direct-manipulation/boxes-touch.html
+++ b/direct-manipulation/boxes-touch.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8" />
 
         <!-- Assorted iOS-related metadata. -->
-        <meta name="viewport" content="width=1000px"/>
+        <meta name="viewport" content="width=device-width"/>
 
         <title>Direct Manipulation w/ Touch, by Edward Bramanti</title>
         <link rel="stylesheet" type="text/css" href="boxes-touch.css"/>
