Using JQuery 1.11.0 because of deprecation issue.
Link to StackOverflow suggestion:
http://stackoverflow.com/questions/20045162/jquery-error-event-returnval
ue-is-deprecated-please-use-the-standard-event-pre

--- a/rpg/index.html
+++ b/rpg/index.html
@@ -190,7 +190,8 @@
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="//code.jquery.com/jquery.js"></script>
+    <!-- EB: Using JQuery 1.11.0-pre to solve deprecation error. -->
+    <script src="//code.jquery.com/jquery-git.js"></script>
 
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
