Removed unnecessary document.write and script tag

--- a/rpg/character.html
+++ b/rpg/character.html
@@ -18,10 +18,7 @@
           <h1>
             <em>
               <strong>
-                <script>
-                  a = window.location.hash.split("#");
-                  document.write(a[1])
-                </script>
+              <!-- Where character name and details go. -->
               </strong>
             </em>
           </h1>
@@ -45,7 +42,7 @@
               <a class="btn btn-info btn-lg" data-toggle="modal" href="#editItemModal"><span class="glyphicon glyphicon-edit"></span> Edit Item Attributes</a>
               <a id="delete-button" data-toggle="modal" href="#deleteItemModal" class="btn btn-lg btn-danger"><span class="glyphicon glyphicon-trash"></span> Delete Item</a>
             </div>
-            <table id = "inventorytable" class="inventorytable">
+            <table id = "inventorytable" class="table inventorytable">
               <thead>
                 <h1><strong><em>Inventory</em></strong></h1>
                 <p><strong>A list of <em></em>items.</strong></p>
