Implementing demo index for widget-from-scratch

--- a/widget-from-scratch/index.html
+++ b/widget-from-scratch/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
-  <body></body>
+  <head>
+  	<meta charset="UTF-8" />
+    <title>jQuery Switch Plugin</title>
+    <link rel="stylesheet" href="jquery.gender-switch.css">
+    <link rel="stylesheet" href="gender-switch-demo.css">
+  </head>
+  <body>
+  	<script src="//code.jquery.com/jquery-latest.min.js"></script>
+  	<script src="gender-switch.js"></script>
+  </body>
 </html>
