Modified edit modal text fields for acceptance of widget

--- a/rpg/index.html
+++ b/rpg/index.html
@@ -113,9 +113,10 @@
           <div class="modal-header">
             <h4 class="modal-title">Edit Character</h4>
           </div>
-          <div class="modal-body">
+          <div class="modal-body" id="edit-modal-body">
             <label for="Edit Name">Edit Name</label>
-            <input type="Name" class="form-control" id="edit-name" placeholder="Edit name of Dragonborn">
+            <!--<input type="Name" class="form-control" id="edit-name" placeholder="Edit name of Dragonborn"> -->
+            <p class="character-text-edit" id="edit-name"></p>
             <label for="Class">Edit Class</label>
             <select class="form-control" id="edit-classType">
               <option>Edit Class Type</option>
@@ -137,9 +138,11 @@
               <option>Female</option>
             </select>
             <label for="Edit Level">Edit Level</label>
-            <input type="Level" class="form-control" id="edit-level" placeholder="Edit Level of Dragonborn">
+            <!--<input type="Level" class="form-control" id="edit-level" placeholder="Edit Level of Dragonborn"> -->
+            <p class="character-text-edit" id="edit-level"></p>
             <label for="Edit Money">Edit Money</label>
-            <input type="text" class="form-control" id="edit-money" placeholder="Edit Amount of Money">
+            <!-- <input type="text" class="form-control" id="edit-money" placeholder="Edit Amount of Money"> -->
+            <p class="character-text-edit" id="edit-money"></p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel Editing</button>
