Filling out test page

--- a/widget-from-scratch/index.html
+++ b/widget-from-scratch/index.html
@@ -2,12 +2,15 @@
 <html>
   <head>
   	<meta charset="UTF-8" />
-    <title>jQuery Switch Plugin</title>
-    <link rel="stylesheet" href="jquery.gender-switch.css">
-    <link rel="stylesheet" href="gender-switch-demo.css">
+    <title>Character Live Edit</title>
+    <link rel="stylesheet" href="character-live-edit.css">
+    <link rel="stylesheet"
+          href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
   </head>
   <body>
+    <p> Inspired from the Bazaar's In-Place Editor, I designed a similar model so users of my RPG Creator have the functionality to manipulate their inputs live. In RPG, I implemented a new function that calls the current values of name, level and money. The widget will be implemented among these values, so users feel they have direct control over the character's name edits. Here are some examples of the functionality below. </p>
+    <p class="character-text-edit">Initial Value</p>
   	<script src="//code.jquery.com/jquery-latest.min.js"></script>
-  	<script src="gender-switch.js"></script>
+  	<script src="character-live-edit.js"></script>
   </body>
 </html>
