--- a/widget-from-scratch/index.html
+++ b/widget-from-scratch/index.html
@@ -9,8 +9,11 @@
   </head>
   <body>
     <h1> Inspired from the Bazaar's In-Place Editor, I designed a similar model so users of my RPG Creator have the functionality to manipulate their inputs live. In RPG, I implemented a new function that calls the current values of name, level and money. The widget will be implemented among these values, so users feel they have direct control over the character's name edits. Here are some examples of the functionality below. </h1>
-    <h2 class="character-text-edit">Initial Value</h2>
-  	<script src="//code.jquery.com/jquery-latest.min.js"></script>
+    <p class="character-text-edit">Initial Value</p>
+    <p class="character-text-edit">Initial Value 2</p>
+    <p class="character-text-edit">Initial Value 3</p>
+    <script src="//code.jquery.com/jquery-latest.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
   	<script src="character-live-edit.js"></script>
     <script src="demo-code.js"></script>
   </body>
