Added CSS and JS to HTML index

--- a/rpg/index.html
+++ b/rpg/index.html
@@ -6,8 +6,9 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
     <link rel="shortcut icon" href="http://images4.wikia.nocookie.net/__cb62351/elderscrolls/images/6/64/Favicon.ico"/>
-    <!-- My CSS -->
+    <!-- My CSS, for both RPG and JQuery widget. -->
     <link rel="stylesheet" href="rpg.css">
+    <link rel="stylesheet" href="character-live-edit.css">
   </head>
   <body>
     <!-- EB: Moved this content into body w/ correct indents. -->
@@ -201,5 +202,8 @@
 
     <!-- Code specific to my RPG user interface. -->
     <script src="rpg.js"></script>
+
+    <!-- Code specific to my JQuery widget. -->
+    <script src="character-live-edit.js"></script>
   </body>
 </html>
