Added demo-code for now

--- a/rpg/index.html
+++ b/rpg/index.html
@@ -205,5 +205,6 @@
 
     <!-- Code specific to my JQuery widget. -->
     <script src="character-live-edit.js"></script>
+    <script src="demo-code.js"></script>
   </body>
 </html>
